Change scss structure files and reset index.html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#ff934f">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Hind:400,700|Libre+Baskerville:400,400i,700|Parisienne&amp;subset=latin-ext"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=latin-ext" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="css/main.css">
@@ -19,7 +18,7 @@
 <body>
   <div class="container">
     <!-- MENU -->
-    <input type="checkbox" id="hamburger-menu">
+    <!-- <input type="checkbox" id="hamburger-menu">
     <nav class="navbar">
       <div class="navbar-list">
         <div class="menu-items">
@@ -50,13 +49,14 @@
     </nav>
     <label for="hamburger-menu" class="hamburger-menu-label">
       <span class="hamburger-menu-bar"></span>
-    </label>
+    </label> -->
 
     <!-- SEKCJA HEADER -->
-    <section class="header" id="home">
+    <!-- <section class="header" id="home">
       <h1 class="greetings">Witam</h1>
       <h2 class="greetings-sub">na mojej stronie</h2>
-      <p class="description">Pracuję jako grafik komputerowy (operator DTP) i&nbsp;próbuję zostać front-end developerem.</p>
+      <p class="description">Pracuję jako grafik komputerowy (operator DTP) i&nbsp;próbuję zostać front-end
+        developerem.</p>
       <div class="self-picture-wrapper">
         <img class="self-picture" src="img/ja.jpg" alt="zdjęcie portretowe Krzysztofa Pawłowskiego">
       </div>
@@ -64,15 +64,15 @@
       <div class="triangle-small"></div>
       <div class="triangle-medium"></div>
       <div class="triangle-big"></div>
-    </section>
+    </section> -->
 
     <!-- SEKCJA O MNIE -->
-    <section class="about-me" id="aboutme">
+    <!-- <section class="about-me" id="aboutme">
       <h2 class="sections-title">O mnie</h2>
       <div class="list">
-        <div class="box">
-          <!-- EDUKACJA -->
-          <div class="box-title">
+        <div class="box">-->
+    <!-- EDUKACJA -->
+    <!-- <div class="box-title">
             <i class="fas fa-graduation-cap"></i>
             <span class="category">edukacja</span>
           </div>
@@ -99,9 +99,9 @@
             </p>
           </div>
         </div>
-        <div class="box">
-          <!-- PRACA -->
-          <div class="box-title">
+        <div class="box"> -->
+    <!-- PRACA -->
+    <!-- <div class="box-title">
             <i class="far fa-handshake"></i>
             <span class="category">praca</span>
           </div>
@@ -112,7 +112,8 @@
               <span class="desc-bold">Urząd miejski
                 <br>w Świnoujściu</span>
             </p>
-            <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+            <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
+              i&nbsp;obsługi systemu Windows
             </div>
             <div class="desc2">instalacja i wymiana kabli sieciowych</div>
           </div>
@@ -123,7 +124,8 @@
               <span class="desc-bold">Urząd miejski
                 <br>w Świnoujściu</span>
             </p>
-            <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+            <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
+              i&nbsp;obsługi systemu Windows
             </div>
             <div class="desc2">instalacja i wymiana kabli sieciowych</div>
           </div>
@@ -174,9 +176,9 @@
             <div class="desc2">tworzenie okładki (w&nbsp;zastępstwie)</div>
           </div>
         </div>
-        <div class="box">
-          <!-- UMIEJĘTNOŚCI -->
-          <div class="box-title">
+        <div class="box"> -->
+    <!-- UMIEJĘTNOŚCI -->
+    <!-- <div class="box-title">
             <i class="fas fa-cogs"></i>
             <span class="category">umiejętności</span>
           </div>
@@ -229,9 +231,9 @@
             </div>
           </div>
         </div>
-        <div class="box">
-          <!-- KURSY, CERTYFIKATY -->
-          <div class="box-title">
+        <div class="box"> -->
+    <!-- KURSY, CERTYFIKATY -->
+    <!-- <div class="box-title">
             <i class="fas fa-certificate"></i>
             <span class="category">kursy, certyfikaty</span>
           </div>
@@ -258,9 +260,9 @@
             </p>
           </div>
         </div>
-        <div class="box">
-          <!-- JĘZYKI -->
-          <div class="box-title">
+        <div class="box"> -->
+    <!-- JĘZYKI -->
+    <!-- <div class="box-title">
             <i class="fas fa-comment"></i>
             <span class="category">języki</span>
           </div>
@@ -277,11 +279,11 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </div> -->
+    <!-- </section>  -->
 
     <!-- SEKCJA PORTFOLIO -->
-    <section class="portfolio" id="portfolio">
+    <!-- <section class="portfolio" id="portfolio">
       <h2 class="sections-title">Portfolio</h2>
       <p class="description">Wszystkie projekty możesz zobaczyć na moim profilu na GitHubie</p>
       <div class="portfolio-grid">
@@ -291,7 +293,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Kalkulator Pożyczkowy</h3>
-            <p class="portfolio-example-description">Aplikacja oblicza miesięczną ratę kredytu do spłacenia. Całkowitą kwotę pożyczki i&nbsp;zysk pożyczkodawcy.</p>
+            <p class="portfolio-example-description">Aplikacja oblicza miesięczną ratę kredytu do spłacenia. Całkowitą
+              kwotę pożyczki i&nbsp;zysk pożyczkodawcy.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -300,7 +303,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Lista Książek</h3>
-            <p class="portfolio-example-description">Baza danych książek, gdzie dodajemy tytuł, autora i&nbsp;cenę książki.</p>
+            <p class="portfolio-example-description">Baza danych książek, gdzie dodajemy tytuł, autora i&nbsp;cenę
+              książki.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -309,7 +313,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Lista Zadań</h3>
-            <p class="portfolio-example-description">Lista zadań do wykonania z&nbsp;możliwością kasowania, filtrowania i&nbsp;modyfikowania konkretnego zadania.
+            <p class="portfolio-example-description">Lista zadań do wykonania z&nbsp;możliwością kasowania, filtrowania
+              i&nbsp;modyfikowania konkretnego zadania.
             </p>
           </div>
         </figure>
@@ -319,7 +324,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Lista Zakupów</h3>
-            <p class="portfolio-example-description">Lista zakupów z&nbsp;możliwością kasowania i&nbsp;modyfikowania konkretnego produktu.
+            <p class="portfolio-example-description">Lista zakupów z&nbsp;możliwością kasowania i&nbsp;modyfikowania
+              konkretnego produktu.
             </p>
           </div>
         </figure>
@@ -329,7 +335,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Biuro Podróży</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią, wyszukiwarką i&nbsp;kontaktem.
+            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią,
+              wyszukiwarką i&nbsp;kontaktem.
             </p>
           </div>
         </figure>
@@ -339,7 +346,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Strona Biznesowa</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;lokalizacją za pomocą Google Maps.
+            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;lokalizacją za
+              pomocą Google Maps.
             </p>
           </div>
         </figure>
@@ -349,7 +357,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Strona IT</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością założenia konta.
+            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością
+              założenia konta.
             </p>
           </div>
         </figure>
@@ -359,7 +368,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Panel Administratora</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością dodawania i&nbsp;kasowania zadań, dodawania postów,
+            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;możliwością
+              dodawania i&nbsp;kasowania zadań, dodawania postów,
               kategorii&nbsp;i użytkowników.</p>
           </div>
         </figure>
@@ -369,7 +379,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Projektowanie</h3>
-            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią projektów podzieloną na kategorie.</p>
+            <p class="portfolio-example-description">Strona zrobiona pod frameworkiem Materialize z&nbsp;galerią
+              projektów podzieloną na kategorie.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -378,7 +389,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Pogoda</h3>
-            <p class="portfolio-example-description">Aplikacja, która pokazuje różne czynniki pogodowe w&nbsp;danej lokalizacji z&nbsp;danych ze strony https://api.wunderground.com.</p>
+            <p class="portfolio-example-description">Aplikacja, która pokazuje różne czynniki pogodowe w&nbsp;danej
+              lokalizacji z&nbsp;danych ze strony https://api.wunderground.com.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -387,7 +399,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">REDDIT</h3>
-            <p class="portfolio-example-description">Wyszukiwarka postów REDDIT z&nbsp;sortowaniem i&nbsp;wyborem liczby wyników.</p>
+            <p class="portfolio-example-description">Wyszukiwarka postów REDDIT z&nbsp;sortowaniem i&nbsp;wyborem
+              liczby wyników.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -396,7 +409,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Wyszukiwarka GitHub</h3>
-            <p class="portfolio-example-description">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i&nbsp;najnowsze repozytoria.</p>
+            <p class="portfolio-example-description">Wyszukiwarka użytkowników GitHuba. Wyświetla dane i&nbsp;najnowsze
+              repozytoria.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -405,7 +419,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">WebDevChallenge1</h3>
-            <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
+            <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie
+              z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -414,7 +429,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">WebDevChallenge37</h3>
-            <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
+            <p class="portfolio-example-description">Strona powstała z&nbsp;gotowego projektu w&nbsp;Photoshopie
+              z&nbsp;grupy na facebooku Weekly WebDev Challenge.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -423,7 +439,8 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Zgadnij liczbę</h3>
-            <p class="portfolio-example-description">Aplikacja sprawdza czy zgadłeś liczbę z&nbsp;przedziału od 1&nbsp;do 10. Masz na to trzy próby.</p>
+            <p class="portfolio-example-description">Aplikacja sprawdza czy zgadłeś liczbę z&nbsp;przedziału od
+              1&nbsp;do 10. Masz na to trzy próby.</p>
           </div>
         </figure>
         <figure class="portfolio-example-wrapper">
@@ -432,14 +449,15 @@
           </a>
           <div class="portfolio-example-description-wrapper">
             <h3 class="portfolio-example-title">Gra w kafelki</h3>
-            <p class="portfolio-example-description">W grze musisz odkrywać pary kafelków o&nbsp;tym samym kolorze. Na końcu pokazuje Ci czas w&nbsp;jakim to zrobiłeś.</p>
+            <p class="portfolio-example-description">W grze musisz odkrywać pary kafelków o&nbsp;tym samym kolorze. Na
+              końcu pokazuje Ci czas w&nbsp;jakim to zrobiłeś.</p>
           </div>
         </figure>
       </div>
-    </section>
+    </section> -->
 
     <!-- SEKCJA KONTAKT -->
-    <section class="contact" id="contact">
+    <!-- <section class="contact" id="contact">
       <h2 class="sections-title">Kontakt</h2>
       <i class="fas fa-envelope"></i>
       <p class="description">krzyszp@wp.pl
@@ -452,20 +470,21 @@
         <a class="link" href="https://github.com/KP1976" target="_blank" aria-label="GitHub" rel="noopener">
           <i class="fab fa-github"></i>
         </a>
-        <a class="link" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank" aria-label="LinkedIn" rel="noopener">
+        <a class="link" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank" aria-label="LinkedIn"
+          rel="noopener">
           <i class="fab fa-linkedin-in"></i>
         </a>
       </div>
-    </section>
+    </section> -->
 
     <!-- STOPKA -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <p class="copyright">&copy; Krzysztof Pawłowski</p>
-    </footer>
+    </footer> -->
 
     <!-- MODALE -->
     <!-- EDUKACJA -->
-    <div class="modal modal-edu">
+    <!-- <div class="modal modal-edu">
       <div class="modal-container">
         <div class="box-title">
           <i class="fas fa-graduation-cap"></i>
@@ -494,10 +513,10 @@
           </p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- PRACA -->
-    <div class="modal modal-work">
+    <!-- <div class="modal modal-work">
       <div class="modal-container">
         <div class="box-title">
           <i class="far fa-handshake"></i>
@@ -510,7 +529,8 @@
             <span class="desc-bold">Urząd miejski
               <br>w Świnoujściu</span>
           </p>
-          <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+          <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
+            i&nbsp;obsługi systemu Windows
           </div>
           <div class="desc2">instalacja i wymiana kabli sieciowych</div>
         </div>
@@ -521,7 +541,8 @@
             <span class="desc-bold">Urząd miejski
               <br>w Świnoujściu</span>
           </p>
-          <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów i&nbsp;obsługi systemu Windows
+          <div class="desc2">konfiguracja i&nbsp;pomoc techniczna urzędnikom w&nbsp;zakresie instalacji programów
+            i&nbsp;obsługi systemu Windows
           </div>
           <div class="desc2">instalacja i wymiana kabli sieciowych</div>
         </div>
@@ -572,10 +593,10 @@
           <div class="desc2">tworzenie okładki (w&nbsp;zastępstwie)</div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- UMIEJĘTNOŚCI -->
-    <div class="modal modal-skills">
+    <!-- <div class="modal modal-skills">
       <div class="modal-container">
         <div class="box-title">
           <i class="fas fa-cogs"></i>
@@ -630,10 +651,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- KURSY, CERTYFIKATY -->
-    <div class="modal modal-courses">
+    <!-- <div class="modal modal-courses">
       <div class="modal-container">
         <div class="box-title">
           <i class="fas fa-certificate"></i>
@@ -662,10 +683,10 @@
           </p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- JĘZYKI -->
-    <div class="modal modal-languages">
+    <!-- <div class="modal modal-languages">
       <div class="modal-container">
         <div class="box-title">
           <i class="fas fa-comment"></i>
@@ -684,9 +705,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </body>
-<script src="js/boxes.js"></script>
+<!-- <script src="js/boxes.js"></script> -->
 
 </html>
