Add hamburger menu

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
 </head>
 
 <body>
-  <div class="container">
+  <main class="container">
+    <div class="hamburger-menu">
+      <div class="hamburger-menu__bar"></div>
+    </div>
+
+    <header class="header">
+      <img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="my-photo">
+    </header>
     <!-- MENU -->
     <!-- <input type="checkbox" id="hamburger-menu">
     <nav class="navbar">
@@ -706,7 +713,7 @@
         </div>
       </div>
     </div> -->
-  </div>
+  </main>
 </body>
 <!-- <script src="js/boxes.js"></script> -->
 
