--- a/index.html
+++ b/index.html
@@ -22,7 +22,26 @@
     </div>
 
     <header class="header">
-      <img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="my-photo">
+      <img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="header__my-photo">
+      <h1 class="header__my-name"><span class="header__my-name--green">Krzysztof</span>Pawłowski</h1>
+      <div class="professions">
+        <h2 class="professions__profession">operator DTP</h2>
+        <h2 class="professions__profession">grafik komputerowy</h2>
+        <h2 class="professions__profession--green">front-end developer?</h2>
+      </div>
+      <div class="header-icons">
+        <a class="header-icons__facebook" href="https://www.facebook.com/KP1976PL" target="_blank" aria-label="Facebook"
+          rel="noopener">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a class="header-icons__github" href="https://github.com/KP1976" target="_blank" aria-label="GitHub" rel="noopener">
+          <i class="fab fa-github"></i>
+        </a>
+        <a class="header-icons__linkedin" href="https://www.linkedin.com/in/krzysztof-pawłowski-74aa01154" target="_blank"
+          aria-label="LinkedIn" rel="noopener">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </div>
     </header>
     <!-- MENU -->
     <!-- <input type="checkbox" id="hamburger-menu">
