--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     <div class="hamburger-menu">
       <div class="hamburger-menu__bar"></div>
     </div>
+    <nav class="menu">
+      <div class="menu__header">
+        <h1 class="header__my-name"><span class="header__my-name--green">Krzysztof</span>Pawłowski</h1>
+      </div>
+      <ul class="menu__list">
+        <li class="list__item"><a class="highlighted" href="#!" rel="noopener">strona główna</a></li>
+        <li class="list__item"><a href="#!" rel="noopener">o mnie</a></li>
+        <li class="list__item"><a href="#!" rel="noopener">portfolio</a></li>
+        <li class="list__item"><a href="#!" rel="noopener">kontakt</a></li>
+      </ul>
+    </nav>
 
     <header class="header">
       <img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="header__my-photo">
