Add animated close button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
 <body>
   <main class="container">
+
+    <!-- MENU -->
     <div class="hamburger-menu">
       <div class="hamburger-menu__bar"></div>
     </div>
@@ -32,6 +34,7 @@
       </ul>
     </nav>
 
+    <!-- HEADER -->
     <header class="header">
       <img src="./img/ja.jpg" alt="photo of Krzysztof Pawłowski" class="header__my-photo">
       <h1 class="header__my-name"><span class="header__my-name--green">Krzysztof</span>Pawłowski</h1>
@@ -54,54 +57,7 @@
         </a>
       </div>
     </header>
-    <!-- MENU -->
-    <!-- <input type="checkbox" id="hamburger-menu">
-    <nav class="navbar">
-      <div class="navbar-list">
-        <div class="menu-items">
-          <a href="#home">
-            <i class="fas fa-home"></i>
-            <span>Strona główna</span>
-          </a>
-        </div>
-        <div class="menu-items">
-          <a href="#aboutme">
-            <i class="fas fa-user-circle"></i>
-            <span>O mnie</span>
-          </a>
-        </div>
-        <div class="menu-items">
-          <a href="#portfolio">
-            <i class="fas fa-th"></i>
-            <span>Portfolio</span>
-          </a>
-        </div>
-        <div class="menu-items">
-          <a href="#contact">
-            <i class="fas fa-envelope"></i>
-            <span>Kontakt</span>
-          </a>
-        </div>
-      </div>
-    </nav>
-    <label for="hamburger-menu" class="hamburger-menu-label">
-      <span class="hamburger-menu-bar"></span>
-    </label> -->
 
-    <!-- SEKCJA HEADER -->
-    <!-- <section class="header" id="home">
-      <h1 class="greetings">Witam</h1>
-      <h2 class="greetings-sub">na mojej stronie</h2>
-      <p class="description">Pracuję jako grafik komputerowy (operator DTP) i&nbsp;próbuję zostać front-end
-        developerem.</p>
-      <div class="self-picture-wrapper">
-        <img class="self-picture" src="img/ja.jpg" alt="zdjęcie portretowe Krzysztofa Pawłowskiego">
-      </div>
-      <span class="myname">Krzysztof Pawłowski</span>
-      <div class="triangle-small"></div>
-      <div class="triangle-medium"></div>
-      <div class="triangle-big"></div>
-    </section> -->
 
     <!-- SEKCJA O MNIE -->
     <!-- <section class="about-me" id="aboutme">
