--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
       <ul class="menu__list">
         <li class="list__item"><a class="highlighted" href="#!" rel="noopener">strona główna</a></li>
-        <li class="list__item"><a href="#!" rel="noopener">o mnie</a></li>
+        <li class="list__item"><a href="aboutme.html" rel="noopener">o mnie</a></li>
         <li class="list__item"><a href="#!" rel="noopener">portfolio</a></li>
         <li class="list__item"><a href="#!" rel="noopener">kontakt</a></li>
       </ul>
@@ -701,7 +701,7 @@
     </div> -->
   </main>
 </body>
+
 <script src="js/menu.js"></script>
-<!-- <script src="js/boxes.js"></script> -->
 
 </html>
